# Logic-Factory-ALS

./: abc.history  test_b1_comb.arch.aig  test_b1_comb.logic.aig  test_b1_comb.logic.dot  test_b1_comb.v
toolkit/: CMakeLists.txt
toolkit/ALFANS/: CMakeLists.txt
toolkit/ALFANS/als/: CMakeLists.txt
toolkit/ALFANS/als/src/: als.cc  als.h  cmdline.hpp  error.cc  error.h  espresso_api.h  header.h  lac.cc  lac.h  main.cc  my_abc.cc  my_abc.h  my_util.cc  my_util.h  simulator.cc  simulator.h
toolkit/HEDALS/: CMakeLists.txt
toolkit/HEDALS/hedals/: CMakeLists copy.txt  CMakeLists.txt
toolkit/HEDALS/hedals/src/: cmdline.hpp  dals.cc  dals.h  dinic.cc  dinic.h  error.cc  error.h  espressoApi.h  header.h  lac.cc  lac.h  main.cc  my_abc.cc  my_abc.h  my_util.cc  my_util.h  simulator.cc  simulator.h
toolkit/HEDALS/input/benchmark/evoapproxlib/adders/12_unsigned/pareto_pwr_mae/: add12u_0G8_gate.blif  add12u_0G8_sop.blif  add12u_0PX_gate.blif  add12u_0PX_sop.blif  add12u_28B_gate.blif  add12u_28B_sop.blif  add12u_2KC_gate.blif  add12u_2KC_sop.blif  add12u_2UF_gate.blif  add12u_2UH_gate.blif  add12u_2UH_sop.blif  add12u_38J_gate.blif  add12u_38J_sop.blif  add12u_39N_gate.blif  add12u_39N_sop.blif  add12u_3UT_gate.blif  add12u_3UT_sop.blif  add12u_4TF_gate.blif  add12u_4TF_sop.blif  add12u_acc.v  add12u_acc_gate.blif  add12u_acc_sop.blif
toolkit/HEDALS/input/benchmark/evoapproxlib/adders/16_unsigned/pareto_pwr_mae/: add16u_067_gate.blif  add16u_067_sop.blif  add16u_07T_gate.blif  add16u_07T_sop.blif  add16u_0GN_gate.blif  add16u_0GN_sop.blif  add16u_0HE_gate.blif  add16u_0HE_sop.blif  add16u_0KU_gate.blif  add16u_0KU_sop.blif  add16u_0P8_gate.blif  add16u_0P8_sop.blif  add16u_0SL_gate.blif  add16u_0SL_sop.blif  add16u_126_gate.blif  add16u_126_sop.blif  add16u_1A5_gate.blif  add16u_1A5_sop.blif  add16u_acc.v  add16u_acc_gate.blif
toolkit/HEDALS/input/benchmark/evoapproxlib/exact/: add12u_2UF_sop.blif  add12u_2UF_strash.blif  add12u_acc_gate.blif  add12u_acc_strash.blif  add16u_1A5_strash.blif  add16u_acc_gate.blif  add16u_acc_sop.blif  add16u_acc_strash.blif  mul11u_003_sop.blif  mul11u_003_strash.blif  mul11u_acc_gate.blif  mul11u_acc_sop.blif  mul11u_acc_strash.blif  mul12u_332_strash.blif  mul12u_acc_gate.blif  mul12u_acc_sop.blif  mul12u_acc_strash.blif  mul16u_9DU_sop.blif  mul16u_9DU_strash.blif  mul16u_acc_gate.blif  mul16u_acc_strash.blif  mul8u_1JJQ_sop.blif  mul8u_1JJQ_strash.blif  mul8u_acc_gate.blif  mul8u_acc_strash.blif
toolkit/HEDALS/input/benchmark/evoapproxlib/multiplers/11x11_unsigned/pareto_pwr_mae/: mul11u_003_gate.blif  mul11u_00H_gate.blif  mul11u_00H_sop.blif  mul11u_03N_gate.blif  mul11u_03N_sop.blif  mul11u_05D_gate.blif  mul11u_05D_sop.blif  mul11u_067_gate.blif  mul11u_067_sop.blif  mul11u_097_gate.blif  mul11u_097_sop.blif  mul11u_09Z_gate.blif  mul11u_09Z_sop.blif  mul11u_acc.v  mul11u_acc_gate.blif
toolkit/HEDALS/input/benchmark/evoapproxlib/multiplers/12x12_unsigned/pareto_pwr_mae/: mul12u_10C_gate.blif  mul12u_10C_sop.blif  mul12u_2BR_gate.blif  mul12u_2BR_sop.blif  mul12u_2BS_gate.blif  mul12u_2BS_sop.blif  mul12u_2BU_gate.blif  mul12u_2BU_sop.blif  mul12u_2BX_gate.blif  mul12u_2BX_sop.blif  mul12u_2DA_gate.blif  mul12u_2DA_sop.blif  mul12u_2JV_gate.blif  mul12u_2JV_sop.blif  mul12u_332_gate.blif  mul12u_332_sop.blif  mul12u_33C_gate.blif  mul12u_33C_sop.blif  mul12u_34G_gate.blif  mul12u_34G_sop.blif  mul12u_acc.v  mul12u_acc_gate.blif
toolkit/HEDALS/input/benchmark/evoapproxlib/multiplers/16x16_unsigned/pareto_pwr_mae/: mul16u_2KD_gate.blif  mul16u_2KD_sop.blif  mul16u_3CF_gate.blif  mul16u_3CF_sop.blif  mul16u_4UG_gate.blif  mul16u_4UG_sop.blif  mul16u_60G_gate.blif  mul16u_60G_sop.blif  mul16u_7G2_gate.blif  mul16u_7G2_sop.blif  mul16u_7L2_gate.blif  mul16u_7L2_sop.blif  mul16u_9DU_gate.blif  mul16u_G87_gate.blif  mul16u_G87_sop.blif  mul16u_HDX_gate.blif  mul16u_HDX_sop.blif  (+5 more)
toolkit/MECALS/: CMakeLists.txt
toolkit/MECALS/als/: CMakeLists.txt
toolkit/MECALS/als/src/: als.cc  als.h  cmdline.hpp  cryptominisat.h  cut.cc  cut.h  error.cc  error.h  espressoApi.h  header.h  lac.cc  lac.h  main.cc  my_abc.cc  my_abc.h  my_util.cc  my_util.h  simulator.cc  simulator.h
toolkit/ResubALS/: CMakeLists.txt
toolkit/ResubALS/als/: CMakeLists.txt
toolkit/ResubALS/als/src/: als.cc  als.h  cmdline.hpp  error.cc  error.h  header.h  lac.cc  lac.h  main.cc  my_abc.cc  my_abc.h  my_util.cc  my_util.h  simulator.cc  simulator.h
toolkit/VACSEM/: CMakeLists.txt
toolkit/VACSEM/Circuit2Cnf/: CMakeLists.txt
toolkit/VACSEM/Circuit2Cnf/core/: CMakeLists.txt
toolkit/VACSEM/Circuit2Cnf/core/src/: circ_sat.cc  circ_sat.h  cmdline.hpp  cnf.cc  cnf.h  dsat.cc  dsat.h  header.h  main.cc  my_abc.cc  my_abc.h  my_util.cc  my_util.h  simulator.cc  simulator.h
toolkit/VACSEM/SimSharpSat/src/: CMakeLists.txt  main.cpp  solver.h
(+30 files in other folders)
